--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "uzair ansari",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
