--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "uzair ansari",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
